--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
           </nav>
 
         <div >
-            <input class="search-bar" type="text" placeholder="Search for meal">
-            <button type="button" class="btn btn-danger">Search</button> 
+            <input id="search-text" class="search-bar" type="text" placeholder="Search for meal">
+            <button onclick="searchData()" type="button" class="btn btn-danger">Search</button>
         </div>
         <ul id="meals">
+
         </ul>
     </section>
     <script src="hungry-monster.js"></script>
